<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".fragments.TransactionsFragment">

    <Button
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/white"
        android:text="@string/filter"
        android:textColor="@color/button_background_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnExtras"
        android:layout_width="164dp"
        android:layout_height="47dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="17dp"
        android:backgroundTint="#FF8B5FED"
        android:text="@string/extras_de_cont"
        app:layout_constraintEnd_toStartOf="@+id/btnSort"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/btnFilter"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSort"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/sort"
        android:textColor="@color/button_background_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SearchView
        android:id="@+id/searchView"
        android:layout_width="336dp"
        android:layout_height="27dp"
        android:backgroundTint="#FF8B5FED"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFilter" />

    <Button
        android:id="@+id/btnToate"
        android:layout_width="123dp"
        android:layout_height="45dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/alfabetic"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/searchView"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnFacturi"
        android:layout_width="129dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/facturi"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btnToate"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnData"
        android:layout_width="74dp"
        android:layout_height="44dp"
        android:layout_marginStart="5dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/data"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btnFacturi"
        app:layout_constraintTop_toBottomOf="@+id/searchView"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnVenituri"
        android:layout_width="163dp"
        android:layout_height="37dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/venituri"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="@+id/btnToate"
        app:layout_constraintTop_toBottomOf="@+id/btnToate"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCheltuieli"
        android:layout_width="166dp"
        android:layout_height="38dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="4dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/cheltuieli"
        android:visibility="gone"
        app:layout_constraintStart_toEndOf="@+id/btnVenituri"
        app:layout_constraintTop_toBottomOf="@+id/btnData"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnCrescator"
        android:layout_width="165dp"
        android:layout_height="39dp"
        android:layout_marginStart="24dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/crescator"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnVenituri"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnDescrescator"
        android:layout_width="168dp"
        android:layout_height="39dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/button_background_color"
        android:text="@string/descrescator"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCheltuieli"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="411dp"
        android:layout_height="669dp"
        android:layout_marginTop="5dp"
        android:foregroundGravity="center"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnDescrescator"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>