<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:layout_constraintCircleRadius="@android:dimen/app_icon_size">

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="404dp"
        android:layout_height="370dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dialog_background" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="168dp"
        android:layout_height="44dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="96dp"
        android:text="@string/withdrawals"
        android:textSize="27sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView12"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/imageView13"
        app:layout_constraintTop_toTopOf="@+id/imageView12" />

    <ImageView
        android:id="@+id/imageView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:srcCompat="@drawable/card" />

    <ImageView
        android:id="@+id/imageView14"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/textView10"
        app:srcCompat="@drawable/row_background" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="400dp"
        android:layout_height="75dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="@+id/imageView12"
        app:layout_constraintTop_toBottomOf="@+id/imageView14"
        app:srcCompat="@drawable/row_background" />

    <Button
        android:id="@+id/btnWithdrawals"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="36dp"
        android:text="@string/closeWithdrawals"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toBottomOf="@+id/imageView15"
        android:backgroundTint="#FF8B5FED"/>

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="49dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView14"
        app:layout_constraintStart_toStartOf="@+id/imageView14"
        app:layout_constraintTop_toTopOf="@+id/imageView14"
        app:srcCompat="@drawable/insert_mastercard" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="49dp"
        android:layout_height="52dp"
        android:layout_marginStart="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15"
        app:srcCompat="@drawable/insert_mastercard" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="178dp"
        android:layout_height="38dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:text="@string/sucursala_constantin_brancoveanu"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="178dp"
        android:layout_height="38dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="17dp"
        android:text="@string/sucursala_vatra_luminoasa"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/ron"
        android:textColor="@color/black"
        android:textSize="15sp"

        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/_1000"
        android:textColor="#4BD314"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toTopOf="@+id/imageView14" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_2_05_2023"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView14"
        app:layout_constraintStart_toEndOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/_140"
        android:textColor="#CC1430"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="46dp"
        android:layout_height="18dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="16dp"
        android:text="@string/ron"

        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/textView24"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/_29_04_2023"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

</androidx.constraintlayout.widget.ConstraintLayout>