<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView29"
        android:layout_width="406dp"
        android:layout_height="393dp"
        android:layout_marginTop="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/dialog_background" />

    <TextView
        android:id="@+id/textView40"
        android:layout_width="222dp"
        android:layout_height="46dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/extras_de_contT"
        android:textSize="27sp"
        app:layout_constraintStart_toEndOf="@+id/imageView30"
        app:layout_constraintTop_toTopOf="@+id/imageView29" />

    <TextView
        android:id="@+id/textView41"
        android:layout_width="372dp"
        android:layout_height="94dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/alegeti_perioada_pentru_care_doriti_un_extras_de_cont_acesta_va_fi_salvat_in_memoria_telefonului_si_se_va_trimite_pe_e_mail_ul_asociat_acestui_cont"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/textView40" />

    <ImageView
        android:id="@+id/imageView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toTopOf="@+id/imageView29"
        app:srcCompat="@drawable/card" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabDeLa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="36dp"
        android:clickable="true"
        android:backgroundTint="@color/white"

        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/textView41"
        app:srcCompat="@drawable/de_la"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabPanaLa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="56dp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/textView41"
        app:srcCompat="@drawable/pana_la"
        android:backgroundTint="@color/white"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck"/>

    <TextView
        android:id="@+id/textView42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:text="@string/de_la"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/textView43"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:text="@string/pana_la"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView41" />

    <TextView
        android:id="@+id/tvDeLa"
        android:layout_width="96dp"
        android:layout_height="23dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="8dp"
        android:text="No date yet"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/fabDeLa" />

    <TextView
        android:id="@+id/tvPanaLa"
        android:layout_width="86dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="56dp"
        android:text="No date yet"
        app:layout_constraintEnd_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/fabPanaLa" />

    <Button
        android:id="@+id/btnSolicita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:text="@string/solicita"
        app:layout_constraintEnd_toEndOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/tvPanaLa" />

    <Button
        android:id="@+id/btnRenunta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        android:text="@string/renunta"
        app:layout_constraintStart_toStartOf="@+id/imageView29"
        app:layout_constraintTop_toBottomOf="@+id/tvDeLa" />

</androidx.constraintlayout.widget.ConstraintLayout>