<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">


<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.PaymentsFragment">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="184dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:text="@string/make_a_transfer"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.707"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="63dp"
        android:layout_height="46dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="15dp"
        android:src="@drawable/buy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/suma1"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView20" />

    <EditText
        android:id="@+id/etSuma"
        android:layout_width="183dp"
        android:layout_height="44dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/este_factura"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <Switch
        android:id="@+id/mySwich"
        android:layout_width="55dp"
        android:layout_height="39dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:thumbTint="@color/switch_on_color"
        app:layout_constraintStart_toEndOf="@+id/textView27"
        app:layout_constraintTop_toBottomOf="@+id/etSuma"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerFurnizor"
        android:layout_width="412dp"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"

        android:background="@drawable/spinner_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mySwich"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="101dp"
        android:layout_height="33dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="15dp"
        android:text="@string/beneficiar"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFurnizor" />

    <EditText
        android:id="@+id/etBeneficiar"
        android:layout_width="181dp"
        android:layout_height="47dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFurnizor"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="22dp"
        android:text="@string/iban"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:text="@string/descriere"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <EditText
        android:id="@+id/etIban"
        android:layout_width="181dp"
        android:layout_height="38dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView28"
        app:layout_constraintTop_toBottomOf="@+id/etBeneficiar"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etDescriere"
        android:layout_width="175dp"
        android:layout_height="44dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintStart_toEndOf="@+id/textView29"
        app:layout_constraintTop_toBottomOf="@+id/etIban"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnSend"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#4958dc"
        android:text="@string/send"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDescriere"
        tools:ignore="SpeakableTextPresentCheck, TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>