<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/pieChart"
            android:layout_width="396dp"
            android:layout_height="335dp"
            android:layout_marginTop="20dp"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/btnGeneral"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAlege"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnGeneral"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="24dp"
            android:text="@string/general"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnAlege"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="800dp"
            android:text="@string/alege_luna"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="322dp"
            android:layout_height="75dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="15dp"
            android:text="@string/obtine_o_predictie_aproximativa_a_sumei_cheltuita_in_luna_viitoare_pe_baza_obiceiurilor_observate_in_istoric"
            android:textSize="16dp"
            app:layout_constraintStart_toStartOf="@+id/pieChart"
            app:layout_constraintTop_toBottomOf="@+id/pieChart" />

        <Button
            android:id="@+id/btnPredict"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="5dp"
            android:text="@string/predict"
            app:layout_constraintStart_toStartOf="@+id/textView9"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <TextView
            android:id="@+id/tvPrezice"
            android:layout_width="86dp"
            android:layout_height="30dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="15dp"
            android:text="TextView"
            android:textSize="20dp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/btnPredict"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />

        <ProgressBar
            android:id="@+id/progBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="4dp"
            app:layout_constraintStart_toEndOf="@+id/btnPredict"
            app:layout_constraintTop_toBottomOf="@+id/textView9"
            android:outlineAmbientShadowColor="@color/colorAccent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>


